<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminBookDetailActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_forma"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:layout_width="235dp"
        android:layout_height="82dp"
        android:fontFamily="@font/laurentianstdsemibold"
        android:text="@string/detail_admin"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"/>

    <ImageButton
        android:id="@+id/btnBackDetailAdmin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/vector_backarrow"
        app:backgroundTint="@color/transparente"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imgBookDetailAdmin"
        android:layout_width="240dp"
        android:layout_height="350dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/image_book"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        />

    <TextView
        android:id="@+id/txtTitleDetailAdmin"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:text="@string/title_book"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.213" />


    <TextView
        android:id="@+id/txtAuthorDetailAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:text="@string/author_book"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDescriptionDetailAdmin"
        android:layout_width="359dp"
        android:layout_height="112dp"
        android:layout_marginBottom="104dp"
        android:text="@string/description_book"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPriceDetailAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/price_book"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <ImageButton
        android:id="@+id/btnEditDetailAdmin"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit_book"
        android:src="@drawable/vector_pencil"

        app:backgroundTint="@color/transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnDeleteDetailAdmin"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete_book"
        android:src="@drawable/vector_trash"

        app:backgroundTint="@color/transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>