<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.BookDetailActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_forma"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:layout_width="235dp"
        android:layout_height="82dp"
        android:fontFamily="@font/laurentianstdsemibold"
        android:text="@string/detail"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="60sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"/>

    <ImageButton
        android:id="@+id/btnBackDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/vector_backarrow"
        app:backgroundTint="@color/transparente"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imgBookDetail"
        android:layout_width="242dp"
        android:layout_height="358dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/image_book"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        />

    <TextView
        android:id="@+id/txtTitleDetail"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:text="@string/title_book"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="35sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/txtAuthorDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:textColor="@color/blancoHueso"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/author_book"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtDescriptionDetail"
        android:layout_width="357dp"
        android:layout_height="109dp"
        android:layout_marginBottom="144dp"
        android:text="@string/description_book"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPriceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:textColor="@color/blancoHueso"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/price_book"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/likeIconDetail"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="1dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        app:drawableTopCompat="@drawable/vector_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dislikeIconDetail"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="1dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        app:drawableTopCompat="@drawable/vector_dislike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnFavoriteDetail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/transparente"
        android:contentDescription="@string/favorite"
        android:src="@drawable/vector_favorite"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dislikeIconDetail"
        app:layout_constraintStart_toEndOf="@+id/likeIconDetail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967" />

</androidx.constraintlayout.widget.ConstraintLayout>