<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <!-- Imagen del libro a la izquierda -->
    <ImageView
        android:id="@+id/imgBookAdmin"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:contentDescription="Imagen del libro"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Contenedor de texto a la derecha -->
    <LinearLayout
        android:id="@+id/textContainerAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imgBookAdmin"
        app:layout_constraintTop_toTopOf="@id/imgBookAdmin"
        app:layout_constraintBottom_toBottomOf="@id/imgBookAdmin"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Título -->
        <TextView
            android:id="@+id/txtTitleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_book"
            android:textColor="@color/blancoHueso"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Autor -->
        <TextView
            android:id="@+id/txtAuthoAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_book"
            android:textColor="@color/blancoHueso"
            android:textSize="14sp" />

        <!-- Precio -->
        <TextView
            android:id="@+id/txtPriceAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_book"
            android:textColor="@color/blancoHueso"
            android:textSize="14sp" />

        <!-- Descripción corta -->
        <TextView
            android:id="@+id/txtDescriptionAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/description_book"
            android:textColor="@color/blancoHueso"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
