<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminMainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_forma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBackAdmin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/vector_backarrow"

        app:backgroundTint="@color/transparente"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:layout_width="235dp"
        android:layout_height="82dp"
        android:fontFamily="@font/laurentianstdsemibold"
        android:text="@string/admin"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="60sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btnSeeBookAdmin"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@drawable/shape_fondoboton"
        android:drawableLeft="@drawable/vector_openbook"
        android:drawablePadding="28dp"
        android:fontFamily="@font/shrutib"
        android:text="@string/see_book"
        android:textSize="40sp"

        app:backgroundTint="@color/azulProfundoMedio"

        app:layout_constraintBottom_toTopOf="@+id/btnSeeUserAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/btnSeeUserAdmin"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@drawable/shape_fondoboton"
        android:drawableLeft="@drawable/vector_user"
        android:drawablePadding="28dp"
        android:fontFamily="@font/shrutib"
        android:text="@string/see_user"
        android:textSize="35sp"

        app:backgroundTint="@color/azulProfundoMedio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.668" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/laurentianstdsemibold"
        android:text="@string/yenny_el_ateneo"
        android:textAlignment="center"
        android:textColor="@color/blancoHueso"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

</androidx.constraintlayout.widget.ConstraintLayout>